# django_project_time_tracker

./: .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: question-template.md
project_time_tracker/: manage.py
project_time_tracker/common/: crud.py  mixins.py  permissions.py  serializers.py
project_time_tracker/common/management/commands/: mock_users.py  (+1 more)
project_time_tracker/project_time_tracker/: asgi.py  settings.py  urls.py  wsgi.py
project_time_tracker/projects/: admin.py  crud.py  mixins.py  models.py  serializers.py  urls.py  views.py
project_time_tracker/projects/migrations/: 0001_initial.py  0002_initial.py  0003_alter_projectassignment_unique_together.py  0004_alter_project_name.py
project_time_tracker/tests/: base.py  factories.py
project_time_tracker/tests/tests_projects/: tests_api.py
project_time_tracker/tests/tests_time_log/: tests_api.py  tests_core.py
project_time_tracker/time_log/: admin.py  core.py  crud.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
project_time_tracker/time_log/migrations/: 0001_initial.py  0002_alter_timelog_start_time.py  0002_initial.py  0003_timelog_end time (when not null) must be grater than start time.py  0004_alter_timelog_end_time_alter_timelog_start_time.py  0005_rename_project_assignee_timelog_project_assignment.py  0006_alter_timelog_end_time.py
project_time_tracker/users/: admin.py  crud.py  mixins.py  models.py  serializers.py
project_time_tracker/users/migrations/: 0001_initial.py
